# seeq-udf-ui

./: .gitignore  MANIFEST.in  NOTICE  README.md  addon.json  package.py  pyproject.toml  requirements.txt  setup.py  test_package.py
development/: UDF_UI_development.ipynb
docs/: .buildinfo  changelog.html  citation.html  genindex.html  github.html  index.html  installation.html  introduction.html  license.html  objects.inv  search.html  searchindex.js  user_guide.html
docs/_sources/: changelog.md.txt  user_guide.md.txt
docs/_static/css/: style.css
docs_src/: Makefile  make.bat
docs_src/source/: changelog.md  citation.md  conf.py  github.md  index.rst  installation.md  introduction.md  license.md  user_guide.md
seeq/addons/udf_ui/: __init__.py  __main__.py  _add_on_main.py  _copy.py  config.ini
seeq/addons/udf_ui/backend/: __init__.py  _backend.py  _fetch_udfs.py  _push_udfs.py  _udf_classes.py  _utility_functions.py
seeq/addons/udf_ui/deployment_notebook/: UDF_UI_deployment.ipynb
seeq/addons/udf_ui/ui_components/: __init__.py  _access_management.py  _app_layout.py  _function_documentation.py  _function_parameters_display.py  _search_display.py  _summary_page.py
seeq/addons/udf_ui/ui_components/templates/: AccessManagement.vue  AppLayout.vue  FunctionDocumentation.vue  FunctionParametersDisplay.vue  SearchDisplay.vue  SummaryPage.vue
tests/: conftest.py  test_backend.py  test_common.py  test_config.ini  test_ui.py
