[tool.poetry]
name = "seeq-udf-ui"
version = "0.1.0"
description = "A seeq add-on tool for managing user-defined formula functions"
authors = ["Wish Lab"]
readme = "README.md"

packages = [
            {include = "seeq"}
            ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
seeq = "^63.0.0"
ipywidgets = "^8.1.1"
ipython = "7.29.0"
ipyvuetify = "^1.8.10"
jupyter = "^1.0.0"
rx = "^3.2.0"
parver = "^0.5"
pytest = "^7.4.2"
wheel = "^0.41.2"
traitlets = "^5.11.2"
setuptools = ">=57.4.0,<57.5.0"
mixpanel = "^4.10.0"
typeguard = "^4.1.5"
appmode = "^0.9.0"
markdown = "^3.5"
unmarkd = "0.1.7"
sphinx = "4.4.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "0.17.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
